--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY="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"
